# qml-model-example

./: CMakeLists.txt  README.md  User.js  UserCppUi.qml  UserJsUi.qml  main.cpp  main.qml  qml.qrc  user.cpp  user.h
